--- a/tutorX/templates/emails/payment/teacher_pay_slip.html
+++ b/tutorX/templates/emails/payment/teacher_pay_slip.html
@@ -519,7 +519,7 @@
                                                                     </td>
                                                                     <td>
                                                                         <h3 class="align-right">
-                                                                            ₦{{pay_per_hour}}/hr
+                                                                            ₦{{pay_per_hour}}
                                                                         </h3>
                                                                     </td>
                                                                 </tr>
@@ -597,7 +597,7 @@
                                                             </tbody>
                                                         </table>
                                                         <p>
-                                                            If you have any questions about this receipt,
+                                                            If you have any questions about this payment,
                                                             simply reply to this email or reach out to our
                                                             <a href="">support team</a> for help.
                                                         </p>
